--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  shared_preferences: ^2.5.2
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +27,4 @@ flutter:
 
   assets:
     - assets/images/logo_extended.png
+    - assets/images/onboarding.png
