--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.2
   google_fonts: ^6.2.1
+  firebase_core: ^3.12.0
 
 dev_dependencies:
   flutter_test:
