--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_core: ^3.12.0
   firebase_auth: ^5.5.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -31,3 +32,9 @@ flutter:
     - assets/images/logo_extended.png
     - assets/images/onboarding.png
     - assets/images/login.png
+    - assets/images/dashboard_sos.png
+    - assets/images/dashboard_emergency_sms.png
+    - assets/images/dashboard_help_bot.png
+    - assets/images/dashboard_safe_shaker.png
+    - assets/images/dashboard_track_me.png
+    - assets/images/dashboard_support.png
