--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_core: ^3.12.0
   firebase_auth: ^5.5.0
   cached_network_image: ^3.4.1
+  cloud_firestore: ^5.6.5
 
 dev_dependencies:
   flutter_test:
