--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^5.5.0
   cached_network_image: ^3.4.1
   cloud_firestore: ^5.6.5
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -39,3 +40,7 @@ flutter:
     - assets/images/dashboard_safe_shaker.png
     - assets/images/dashboard_track_me.png
     - assets/images/dashboard_support.png
+    - assets/images/logo.png
+    - assets/images/lobby_carousel_1.png
+    - assets/images/lobby_carousel_2.png
+    - assets/images/lobby_carousel_3.png
