feat: Implement real-time location sharing with Firebase
This commit introduces real-time location sharing functionality using Firebase Firestore, `geolocator` package, and a new `LocationService`. The changes include:

-   **Location Service:**
    -   Created `LocationService` in `lib/services/location_service.dart` to handle location-related operations.
    -   Added `checkPermission` to verify and request location permissions.
    - Added `getPermissionStatus` to verify location permissions.
    -   Implemented `startSharing` to periodically get the user's current location and store it in a Firestore collection named `locations`.
    -   Implemented `stopSharing` to halt the periodic location updates.
    -   Added `isSharingLocation` as a `Stream` to notify if the location is being shared.
    - The method `startSharing` throws an error if the user is not signed in or if the location permission is denied.
    - The data in the `locations` collection includes the latitude, longitude and the timestamp.
-   **Dashboard Screen:**
    -   Updated `DashboardScreen` in `lib/screens/dashboard_screen.dart` to integrate with the `LocationService`.
    - Added a boolean `_isSharingLocation` to keep track of the status.
    - Added a `initState` to subscribe to the stream of `isSharingLocation`.
    -   Modified the "Track Me (Advanced)" tile to:
        -   Toggle the location sharing by calling `startSharing` or `stopSharing`.
        -   Update its background color to green when sharing is active.
        - Update its text color to white when sharing is active.
        -   Added a confirmation dialog to confirm the action.
-   **Dependencies:**
    -   Added `geolocator` as a dependency in `pubspec.yaml` and `pubspec.lock`.
- **Firestore Locations:**
    - Firestore locations are set per product or per resource.
    - The locations can't be changed after it is configured.
    - Firestore data must be located close to users and services to reduce latency.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cached_network_image: ^3.4.1
   cloud_firestore: ^5.6.5
   carousel_slider: ^5.0.0
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
