feat: Implement real-time location tracking and visualization
This commit introduces real-time location tracking for users marked as "Valora" and visualizes their locations on a map. The changes include:

-   **Location Tracking:**
    -   Created `LocationModel` to store location data: `timestamp`, `longitude`, and `latitude`.
    -   Created `LocationsScreen` to display locations of associated users in real time.
    -   Modified `UserModel` to include a `valoras` list.
    -   Added `getValoras` in `UsersService` to retrieve users based on the `guardians` array.
    -   Added `location` method in `LocationService` to retrieve real-time location updates for a given user ID.
    -   Modified `DashboardScreen` so that the "Track Me (Advanced)" tile that navigates to `LocationsScreen`.
-   **Map Visualization:**
    -   Added `google_maps_flutter` and `get_time_ago` dependencies.
    -   Implemented `GoogleMap` widget in `LocationsScreen` to display user locations.
    -   Added custom `marker.png` to be used in the `GoogleMap`.
- **Android Configuration:**
    - Added the `API_KEY` to the `android/app/src/main/AndroidManifest.xml` file.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   cloud_firestore: ^5.6.5
   carousel_slider: ^5.0.0
   geolocator: ^13.0.2
+  google_maps_flutter: ^2.10.1
+  get_time_ago: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -45,3 +47,4 @@ flutter:
     - assets/images/lobby_carousel_1.png
     - assets/images/lobby_carousel_2.png
     - assets/images/lobby_carousel_3.png
+    - assets/images/marker.png
