--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   geolocator: ^13.0.2
   google_maps_flutter: ^2.10.1
   get_time_ago: ^2.3.0
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^6.0.7
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +45,7 @@ flutter:
     - assets/images/dashboard_safe_shaker.png
     - assets/images/dashboard_track_me.png
     - assets/images/dashboard_support.png
+    - assets/images/dashboard_family.png
     - assets/images/logo.png
     - assets/images/lobby_carousel_1.png
     - assets/images/lobby_carousel_2.png
