--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,14 @@ dependencies:
   get_time_ago: ^2.3.0
   qr_flutter: ^4.1.0
   mobile_scanner: ^6.0.7
+  mockito: ^5.4.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
 
 flutter:
 
