--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   qr_flutter: ^4.1.0
   mobile_scanner: ^6.0.7
   mockito: ^5.4.6
+  fake_async: ^1.3.2
 
 dev_dependencies:
   flutter_test:
