--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,9 @@
 include: package:flutter_lints/flutter.yaml
 
+analyzer: 
+  exclude:
+    - "test/**/*.mocks.dart"
+
 linter:
   rules:
     avoid_print: false
