--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,13 @@ dependencies:
   cached_network_image: ^3.4.1
   cloud_firestore: ^5.6.5
   carousel_slider: ^5.0.0
-  geolocator: ^13.0.2
   google_maps_flutter: ^2.10.1
   get_time_ago: ^2.3.0
   qr_flutter: ^4.1.0
   mobile_scanner: ^6.0.7
   mockito: ^5.4.6
   fake_async: ^1.3.2
+  flutter_background_geolocation: ^4.16.9
 
 dev_dependencies:
   flutter_test:
