--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   mockito: ^5.4.6
   fake_async: ^1.3.2
   flutter_background_geolocation: ^4.16.9
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
