--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   fake_async: ^1.3.2
   flutter_background_geolocation: ^4.16.9
   local_auth: ^2.3.0
+  shake_gesture: ^1.2.0
 
 dev_dependencies:
   flutter_test:
