--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   local_auth: ^2.3.0
   shake_gesture: ^1.2.0
   http: ^1.4.0
+  flutter_gemini: ^3.0.0
 
 dev_dependencies:
   flutter_test:
