--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shake_gesture: ^1.2.0
   http: ^1.4.0
   flutter_gemini: ^3.0.0
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
