feat: Add Yeheliya Foundation supporter link and image to SupportScreen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,3 +64,4 @@ flutter:
     - assets/images/marker.png
     - assets/images/dashboard_safe_zones.png
     - assets/images/dashboard_recordings.png
+    - assets/images/support_yeheliya_foundation.png
