--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   record: ^6.0.0
   path_provider: ^2.1.2
   audioplayers: ^5.2.1
+  awesome_notifications: ^0.10.1
+  background_fetch: ^1.3.8
 
 dev_dependencies:
   flutter_test:
