feat(functions): add Firebase Cloud Functions for SOS alerts
- Created package.json for managing dependencies and scripts for building, serving, and deploying functions.
- Implemented the sendSosAlert function to handle document writes in the 'sos' Firestore collection.
- The function sends notifications to guardians when a user activates SOS mode.
- Added TypeScript configuration for compiling the functions.

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,37 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"ai-guardian-f091c","appId":"1:380822701457:android:c7e517a934cd00c5474630","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"ai-guardian-f091c","configurations":{"android":"1:380822701457:android:c7e517a934cd00c5474630"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "ai-guardian-f091c",
+          "appId": "1:380822701457:android:c7e517a934cd00c5474630",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "ai-guardian-f091c",
+          "configurations": {
+            "android": "1:380822701457:android:c7e517a934cd00c5474630"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
+    }
+  ]
+}
