--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   audioplayers: ^5.2.1
   awesome_notifications: ^0.10.1
   background_fetch: ^1.3.8
+  firebase_messaging: ^15.2.6
 
 dev_dependencies:
   flutter_test:
